<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.splashscreen.SplashScreen">

    <ImageView
        android:id="@+id/SplashScreenImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_titleapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/app_title"
        app:layout_constraintEnd_toEndOf="@+id/SplashScreenImage"
        app:layout_constraintStart_toStartOf="@+id/SplashScreenImage"
        app:layout_constraintTop_toBottomOf="@+id/SplashScreenImage" />

    <TextView
        android:id="@+id/txt_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_dev"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pb_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_titleapp"
        app:layout_constraintStart_toStartOf="@+id/txt_titleapp"
        app:layout_constraintTop_toBottomOf="@+id/txt_titleapp" />


</androidx.constraintlayout.widget.ConstraintLayout>