<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailstory.DetailStoryActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back"
        android:foreground="@drawable/bg_back"
        android:clickable="true"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/bg_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/img_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/frame_detail"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_detail"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Nama Pengguna" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:maxLines="3"
            android:minLines="2"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            tools:text="ini deskripsi"/>

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/time"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/txt_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Lokasi"
            android:drawableStart="@drawable/ic_location"
            android:textSize="12sp"
            android:layout_gravity="start|bottom"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorControlNormal"
        tools:text="My Story"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

</androidx.constraintlayout.widget.ConstraintLayout>